Build TEST ENVIRONMENT

--- a/.env
+++ b/.env
@@ -2,4 +2,7 @@
 DATABASE_URI = "postgresql://postgres:iwantbefree@localhost/db_products"
 
 # ROOT PATH for VIDEO & THUMBNAILs
-ROOT_PATH = "D:\New folder\"
+ROOT_PATH = "./thumbnail"
+
+# DIR PATH FOR STOR OF RANDOM IMAGES
+RAMDOM_IMAGES = "./thumbnail/random"
