--- a/.env
+++ b/.env
@@ -1,8 +1,9 @@
 # Database URL
 DATABASE_URI = "postgresql://postgres:iwantbefree@localhost/db_products"
 
-# ROOT PATH for VIDEO & THUMBNAILs
-ROOT_PATH = "./thumbnail"
+# ROOT PATH FOR VIDEO & THUMBNAILs
+ROOT_PATH = "./share"
 
 # DIR PATH FOR STOR OF RANDOM IMAGES
-RAMDOM_IMAGES = "./thumbnail/random"
+RAMDOM_IMAGES = "./share/random/thumbnails"
+
