--- a/.env
+++ b/.env
@@ -1,9 +1,12 @@
 # Database URL
-DATABASE_URI = "postgresql://postgres:iwantbefree@localhost/db_products"
+DATABASE_URI = "postgresql://postgres:postgres@localhost/db_products"
 
 # ROOT PATH FOR VIDEO & THUMBNAILs
 ROOT_PATH = "./share"
 
 # DIR PATH FOR STOR OF RANDOM IMAGES
 RAMDOM_IMAGES = "./share/random/thumbnails"
+
+# HOST IP
+HOST = "127.0.0.1"
 
