--- a/.env
+++ b/.env
@@ -1,11 +1,20 @@
 # Database URL
 DATABASE_URI = "postgresql://postgres:postgres@localhost/db_products"
 
+DB_USER = "postgres"
+DB_PASSWORD = "postgres"
+DB_IP = "localhost"
+DB_NAME = "db_products"
+DB_PORT = "5432"
+
 # ROOT PATH FOR VIDEO & THUMBNAILs
-ROOT_PATH = "./share"
+ROOT_PATH = "/share"
 
 # DIR PATH FOR STOR OF RANDOM IMAGES
-RAMDOM_IMAGES = "./share/random/thumbnails"
+RAMDOM_IMAGES = "/share/random/thumbnails"
+
+# RTSP SERVER URL
+
 
 # HOST IP
 HOST = "127.0.0.1"
