--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,8 @@
-Flask==2.2.2
-Flask-SQLAlchemy==2.4.1
-SQLAlchemy==1.3.11
-python-dotenv==0.21.1
+flask
+flask-SQLAlchemy
+SQLAlchemy
+python-dotenv
+psycopg2-binary
+numpy
+moviepy
+requests
