--- a/.env
+++ b/.env
@@ -13,8 +13,8 @@ ROOT_PATH = "/share"
 # DIR PATH FOR STOR OF RANDOM IMAGES
 RAMDOM_IMAGES = "/share/random/thumbnails"
 
-# RTSP SERVER URL
-
+# TIME FOR SAVING FILES (input using date)
+LIMIT = 5 # days
 
 # HOST IP
 HOST = "127.0.0.1"
